z-index fixes

--- a/wp-content/themes/vantage/partystart.css
+++ b/wp-content/themes/vantage/partystart.css
@@ -1019,6 +1019,9 @@ ul.job_listings li.job_listing a {
     bottom: 0;
     right: 0;
     z-index:99;
+    -webkit-transition: all 300ms;
+    -moz-transition: all 300ms;
+    transition: all 300ms;
 }
 #members-list li .musikertype {
 z-index:100!important;
